--- a/project4/index.html
+++ b/project4/index.html
@@ -20,7 +20,8 @@
 
        <section class="section section-high">
        <h2>Michael Schumacher Ferrari</h2>
-       <p>Michael Schumacher (German: [ˈmɪçaːʔeːl ˈʃuːmaxɐ] ⓘ; born 3 January 1969) is a German former racing driver who competed in Formula One from 1991 to 2006 and from 2010 to 2012...</p>
+       <p>Michael Schumacher (German:born 3 January 1969) is a German former racing driver who competed in Formula One from 1991 to 2006 and from 2010 to 2012.
+        Schumacher won a record-setting seven Formula One World Drivers' Championship titles, tied by Lewis Hamilton in 2020, and—at the time of his retirement—held the records for most wins (91), pole positions (68), and podium finishes (155), while he maintains the record for most fastest laps (77), among others.</p>
       </section>
 
       <section class="pimg2">
@@ -33,7 +34,7 @@
 
       <section class="section section-dark">
        <h2>Born</h2>
-       <p>Born in Hürth to a working-class family...</p>
+       <p>Born in Hürth to a working-class family, Schumacher began competitive kart racing aged four in a pedal kart built from discarded parts. After a successful karting career—culminating in his victory at the direct-drive Karting European Championship in 1987—Schumacher graduated to junior formulae. He dominated Formula König in his debut season, before graduating to German Formula Three in 1989, where he finished third. He won the title in 1990, also claiming the Macau Grand Prix and becoming a race-winner in the World Sportscar Championship with Sauber Mercedes. Schumacher made his debut Formula One appearance with Jordan at the Belgian Grand Prix in 1991; his qualifying performance saw Benetton sign him for the remainder of the season. In 1992, he achieved his maiden victory in Belgium amongst several podiums, which he repeated at the Portuguese Grand Prix in 1993. Schumacher won his maiden World Drivers' Championship with eight victories in 1994, following a collision with his rival Damon Hill at the last race of the season. He won a further nine Grands Prix as he defended his title in 1995.</p>
       </section>
 
       <section class="pimg3">
@@ -46,7 +47,7 @@
 
       <section class="section section-dark">
        <h2>SCHUMACHER STATISTICS</h2>
-       <p>Schumacher moved to the struggling Ferrari...</p>
+       <p>In 1995, Schumacher successfully defended his title with Benetton, which now had the same Renault engine as Williams; according to observers, including Peter Wright, Benetton had the better team while Williams had the superior car. Schumacher accumulated 33 more points than second-placed Hill. With Herbert as teammate, he took Benetton to its first Constructors' Championship, breaking the dominance of McLaren and Williams, and became the youngest two-time World Champion in Formula One history.</p>
       </section>
 
       <section class="pimg1">
@@ -59,3 +60,4 @@
 
 </body>
 </html>
+
